fix(styles): hides horizontal scroll

--- a/packages/styles/scss/components/leadspace/_leadspace.scss
+++ b/packages/styles/scss/components/leadspace/_leadspace.scss
@@ -1,5 +1,5 @@
 /**
- * Copyright IBM Corp. 2016, 2021
+ * Copyright IBM Corp. 2016, 2022
  *
  * This source code is licensed under the Apache-2.0 license found in the
  * LICENSE file in the root directory of this source tree.
@@ -189,7 +189,7 @@ $btn-min-width: 26;
 
     @include carbon--breakpoint(lg) {
       width: 100vw;
-      position: relative;
+      overflow-x: hidden;
       left: 50%;
       right: 50%;
       margin-left: -50vw;
